--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Boolando</title>
 </head>
 <body>
-    
     <!-- Header -->
     <header>
         <nav class="navigation-menu">
@@ -27,8 +26,8 @@
             
             <div class="navigation-buttons">
                 <ul>
-                    <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-user" ></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-heart" ></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 </ul>
             </div>            
@@ -38,11 +37,71 @@
     <div class="container">
     <!-- Main Content -->
     <main>
-        <div class="container">
             <div class="row">
                 <div class="column">
                     <div class="card">
-                        <img src="img/1.webp" alt="model body">
+                        <img src="img/1.webp"  class="product" alt="model boy">
+                        <div class="discount">-50%</div>
+                        <div class="green-product">Sostenibilità</div>
+                        <h5>Levi's</h5>
+                        <H4>RELAXED FIT TEE UNISEX</H4>
+                        <h5 class="discount-price">14,99 €</h5>
+                        <h5> <del>29,99 €</del></h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="card">
+                        <img src="img/2.webp" class="product" alt="model girl">
+                        <div class="discount">-30%</div>
+                        <h5>Guess</h5>
+                        <H4>ROSES TEE</H4>
+                        <h5 class="discount-price">20,99 €</h5>
+                        <h5> <del>29,99 €</del></h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img/3.webp" class="product" alt="model girl">
+                        <div class="discount">-30%</div>
+                        <h5>Come zucchero filato</h5>
+                        <H4>Voglia di colori di pastello</H4>
+                        <h5 class="discount-price">129,99 €</h5>
+                        <h5> <del>184,99 €</del></h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img/4.webp" class="product"alt="model boy">
+                        <div class="discount">-50%</div>
+                        <div class="green-product">Sostenibilità</div>
+                        <h5>Levi's</h5>
+                        <H4>TEE UNISEX</H4>
+                        <h5 class="discount-price">14,99 €</h5>
+                        <h5> <del>29,99 €</del></h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img/5.webp" class="product" alt="model girl">
+                        <h5>Maya Deluxe</h5>
+                        <H4>STRIPE BODICE</H4>
+                        <h5 class="discount-price">99,99 €</h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img/6.webp" class="product" alt="model girl">
+                        <div class="green-product-no-discount">Sostenibilità</div>
+                        <h5>Esprit</h5>
+                        <H4>MAGLIONE - BLACK</H4>
+                        <h5 class="discount-price">14,99 €</h5>
+                        <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
                     </div>
                 </div>
             </div>
