main fixed images hover

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             <div class="row">
                 <div class="column">
                     <div class="card">
-                        <img src="img/1.webp"  class="product" alt="model boy">
+                        <div class="container-img">
+                            <img src="img/1b.webp"class="product" alt="">
+                        </div>
+                        <img src="img/1.webp"  class="product" id="type1" alt="model boy">
                         <div class="discount">-50%</div>
                         <div class="green-product">Sostenibilità</div>
                         <h5>Levi's</h5>
@@ -53,6 +56,9 @@
 
                 <div class="column">
                     <div class="card">
+                        <div class="container-img">
+                            <img src="img/2b.webp"class="product" alt="">
+                        </div>
                         <img src="img/2.webp" class="product" alt="model girl">
                         <div class="discount">-30%</div>
                         <h5>Guess</h5>
@@ -64,6 +70,9 @@
                 </div>
                 <div class="column">
                     <div class="card">
+                        <div class="container-img">
+                            <img src="img/3b.webp"class="product" alt="">
+                        </div>
                         <img src="img/3.webp" class="product" alt="model girl">
                         <div class="discount">-30%</div>
                         <h5>Come zucchero filato</h5>
@@ -75,6 +84,9 @@
                 </div>
                 <div class="column">
                     <div class="card">
+                        <div class="container-img">
+                            <img src="img/4b.webp"class="product" alt="">
+                        </div>
                         <img src="img/4.webp" class="product"alt="model boy">
                         <div class="discount">-50%</div>
                         <div class="green-product">Sostenibilità</div>
@@ -87,6 +99,9 @@
                 </div>
                 <div class="column">
                     <div class="card">
+                        <div class="container-img">
+                            <img src="img/5b.webp"class="product" alt="">
+                        </div>
                         <img src="img/5.webp" class="product" alt="model girl">
                         <h5>Maya Deluxe</h5>
                         <H4>STRIPE BODICE</H4>
@@ -96,6 +111,9 @@
                 </div>
                 <div class="column">
                     <div class="card">
+                        <div class="container-img">
+                            <img src="img/6b.webp"class="product" alt="">
+                        </div>
                         <img src="img/6.webp" class="product" alt="model girl">
                         <div class="green-product-no-discount">Sostenibilità</div>
                         <h5>Esprit</h5>
