--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <H4>ROSES TEE</H4>
                     <h5 class="discount-price">20,99 €</h5>
                     <h5> <del>29,99 €</del></h5>
-                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl"></i></div>
                 </div>
             </div>
             <div class="column">
@@ -79,7 +79,7 @@
                     <H4>Voglia di colori di pastello</H4>
                     <h5 class="discount-price">129,99 €</h5>
                     <h5> <del>184,99 €</del></h5>
-                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl"></i></div>
                     </div>
                 </div>
             <div class="column">
@@ -94,7 +94,7 @@
                     <H4>TEE UNISEX</H4>
                     <h5 class="discount-price">14,99 €</h5>
                     <h5> <del>29,99 €</del></h5>
-                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl"></i></div>
                 </div>
             </div>
             <div class="column">
@@ -106,7 +106,7 @@
                     <h5>Maya Deluxe</h5>
                     <H4>STRIPE BODICE</H4>
                     <h5 class="discount-price">99,99 €</h5>
-                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl"></i></div>
                 </div>
             </div>
             <div class="column">
@@ -119,7 +119,7 @@
                     <h5>Esprit</h5>
                     <H4>MAGLIONE - BLACK</H4>
                     <h5 class="discount-price">14,99 €</h5>
-                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl" id="favourite-change"></i></div>
+                    <div class="favourite"><i class="fa-solid fa-heart fa-2xl"></i></div>
                 </div>
             </div>
         </div>            
